fix: make datepicker popover z-index higher than fixed price-box

--- a/src/scss/_datepicker.scss
+++ b/src/scss/_datepicker.scss
@@ -13,7 +13,7 @@
   --duet-font-normal: normal;
   --duet-font-bold: bold;
   --duet-radius: 0;
-  --duet-z-index: 4;
+  --duet-z-index: 1070; // zindex-popover
 }
 
 /**
